# ProjectHydratus

./: Cargo.toml  README.md
hydratus-core/: Cargo.toml
hydratus-core/src/: map.rs
hydratus-editor/: Cargo.toml
hydratus-editor/src/: asset_manager.rs  editor.rs  main.rs  panels.rs
hydratus-editor/src/components/: menu.rs
hydratus-editor/src/panels/: bottom_panel.rs  central_panel.rs  left_panel.rs  top_panel.rs
hydratus-game/: Cargo.toml
