[package]
name = "hydratus-editor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
egui_extras = { version = "*", features = ["image", "file"] }
image = { version = "0.25", features = ["jpeg", "png", "bmp"] }
hydratus-core = { version = "0.1.0", path = "../hydratus-core" }
rfd = "0.17.2"
